--- a/package.json
+++ b/package.json
@@ -22,23 +22,25 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "@ionic/angular": "^5.5.2",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "jsqr": "^1.4.0",
+    "latest": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular-eslint/builder": "~12.0.0",
+    "@angular-devkit/build-angular": "^17.2.3",
+    "@angular-eslint/builder": "^12.7.0",
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.1.1",
+    "@angular/cli": "^17.2.3",
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -56,7 +58,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
